feat: finish create prescription form
