# src/api/prescriptions/create-prescriptions.ts
@@ -1,10 +1,48 @@
+import { HTTPErrorResponse, HTTPSuccessResponse } from "@/@types/http";
 import { api } from "@/lib/axios";
-import { CreatePrescriptionBody } from "@/@types/prescription";
+import { AxiosError } from "axios";
 
-export async function createPrescription(data: CreatePrescriptionBody) {
+interface CreatePrescriptionRequest {
+	medicalRecord: string;
+	patientName: string;
+	unit: string;
+	medicine: string;
+	via: string;
+	dose: string;
+	posology: string;
+	treatmentDays: string[];
+}
+
+interface CreatePrescriptionSuccessResponse extends HTTPSuccessResponse {
+	data: null;
+}
+
+interface CreatePrescriptionErrorResponse extends HTTPErrorResponse {
+	data: null;
+}
+
+type CreatePrescriptionResponse =
+	| CreatePrescriptionSuccessResponse
+	| CreatePrescriptionErrorResponse;
+
+export async function createPrescription(
+	body: CreatePrescriptionRequest
+): Promise<CreatePrescriptionResponse> {
 	try {
-		await api.post("/prescriptions", data);
+		const response = await api.post<CreatePrescriptionSuccessResponse>(
+			"/prescriptions",
+			body
+		);
+		return response.data;
 	} catch (error) {
-		throw error;
+		if (error instanceof AxiosError && error.response?.data) {
+			return error.response.data;
+		}
+
+		return {
+			success: false,
+			error: "Erro desconhecido",
+			data: null,
+		};
 	}
 }
